# OrderBook-rs

./: Cargo.toml  ISSUE_IV.md  Makefile  README.md
doc/: README.md  USER_GUIDE.md
examples/: Cargo.toml  README.md
src/: lib.rs  prelude.rs
src/orderbook/: book.rs  book_change_event.rs  cache.rs  manager.rs  matching.rs  mod.rs  modifications.rs  private.rs  snapshot.rs
src/orderbook/implied_volatility/: black_scholes.rs  error.rs  integration.rs  mod.rs  solver.rs  types.rs
src/orderbook/tests/: depth_analysis.rs  enriched_snapshot_tests.rs  iterator_tests.rs  market_impact_tests.rs  market_metrics.rs  matching.rs  mod.rs  modifications.rs  order_placement_tests.rs  serialize_tests.rs  statistics_tests.rs
tests/unit/: book_coverage_tests.rs  implied_volatility_tests.rs  mod.rs  snapshot_restore_tests.rs
