[package]
name = "examples"
version = "0.1.0"
edition = "2024"

[dependencies]
orderbook-rs = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
uuid = { workspace = true }
pricelevel = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { workspace = true }
