[package]
name = "examples"
version = "0.1.0"
edition = "2024"

[dependencies]
orderbook-rs = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
pricelevel = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
